Fix: fix z-index of header to higher

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -822,7 +822,7 @@ button {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 3;
+  z-index: 11;
   display: flex;
   align-items: center;
   background-color: #131313;
